--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,4 +4,9 @@ nmHoistingLimits: workspaces
 
 nodeLinker: node-modules
 
+packageExtensions:
+  solid-js@*:
+    dependencies:
+      babel-plugin-transform-rename-import: "^2.3.0"
+
 yarnPath: .yarn/releases/yarn-3.0.2.cjs
