--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "esbuild": "0.13.7",
         "dom-expressions": "workspace:*",
         "babel-plugin-jsx-dom-expressions": "workspace:*",
+        "lit-dom-expressions": "workspace:*",
+        "hyper-dom-expressions": "workspace:*",
         "solid-js": "workspace:*",
         "babel-preset-solid": "workspace:*",
         "solid-app-router": "workspace:*",
@@ -22,13 +24,16 @@
     "scripts": {
         "bootstrap": "yarn install --mode=skip-build",
         "build-babel-plugin-jsx-dom-expressions": "yarn workspace babel-plugin-jsx-dom-expressions run build",
+        "build-lit-dom-expressions": "cd submodules/dom-expressions/packages/lit-dom-expressions && npm run build",
+        "build-hyper-dom-expressions": "cd submodules/dom-expressions/packages/hyper-dom-expressions && npm run build",
         "build-solid-refresh": "yarn workspace solid-refresh run build",
         "build-vite-plugin-solid": "yarn workspace vite-plugin-solid run build",
         "build-solid": "cd submodules/solid/packages/solid && npm run build",
-        "build-dev-dependencies": "npm-run-all -c -p build-babel-plugin-jsx-dom-expressions build-solid-refresh build-vite-plugin-solid build-solid"
+        "build-dev-dependencies": "npm-run-all -c -p build-babel-plugin-jsx-dom-expressions build-lit-dom-expressions build-hyper-dom-expressions build-solid-refresh build-vite-plugin-solid build-solid"
     },
     "packageManager": "yarn@3.0.2",
     "workspaces": [
+        "examples/*",
         "submodules/dom-expressions",
         "submodules/dom-expressions/packages/*",
         "submodules/solid",
