--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "devDependencies": {
         "npm-run-all": "^4.1.5",
         "rollup": "^2.56.1",
+        "typescript": ">=4.4.0",
         "yarn": "^1.22.15"
     },
     "resolutions": {
-        "vite": "2.7.0-beta.0",
+        "vite": "2.7.0-beta.1",
         "esbuild": "0.13.7",
         "dom-expressions": "workspace:*",
         "babel-plugin-jsx-dom-expressions": "workspace:*",
