--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "devDependencies": {
         "npm-run-all": "^4.1.5",
         "rollup": "^2.56.1",
+        "tslib": "^2.3.1",
         "typescript": ">=4.4.0",
         "yarn": "^1.22.15"
     },
