--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "solid"]
 	path = submodules/solid
-	url = git@github.com:fictitious/solid.git
+	url = https://github.com/fictitious/solid.git
 [submodule "solid-docs"]
 	path = submodules/solid-docs
 	url = https://github.com/solidjs/solid-docs.git
 [submodule "solid-site"]
 	path = submodules/solid-site
-	url = git@github.com:fictitious/solid-site.git
+	url = https://github.com/fictitious/solid-site.git
 [submodule "solid-app-router"]
 	path = submodules/solid-app-router
-	url = git@github.com:fictitious/solid-app-router.git
+	url = https://github.com/fictitious/solid-app-router.git
 [submodule "dom-expressions"]
 	path = submodules/dom-expressions
-	url = git@github.com:fictitious/dom-expressions.git
+	url = https://github.com/fictitious/dom-expressions.git
 [submodule "vite-plugin-solid"]
 	path = submodules/vite-plugin-solid
-	url = git@github.com:fictitious/vite-plugin-solid.git
+	url = https://github.com/fictitious/vite-plugin-solid.git
 [submodule "solid-refresh"]
 	path = submodules/solid-refresh
 	url = https://github.com/solidjs/solid-refresh.git
