--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "build-solid-refresh": "yarn workspace solid-refresh run build",
         "build-vite-plugin-solid": "yarn workspace vite-plugin-solid run build",
         "build-solid": "cd submodules/solid/packages/solid && npm run build",
-        "build-dev-dependencies": "npm-run-all -c -p build-babel-plugin-jsx-dom-expressions build-lit-dom-expressions build-hyper-dom-expressions build-solid-refresh build-vite-plugin-solid build-solid"
+        "build-solid-devtools": "cd submodules/solid-devtools && yarn run build",
+        "build-dev-dependencies": "npm-run-all -c -p build-babel-plugin-jsx-dom-expressions build-lit-dom-expressions build-hyper-dom-expressions build-solid-refresh build-vite-plugin-solid build-solid",
+        "build": "npm-run-all -s build-dev-dependencies build-solid-devtools"
     },
     "packageManager": "yarn@3.0.2",
     "workspaces": [
@@ -43,6 +45,7 @@
         "submodules/solid-app-router",
         "submodules/solid-refresh",
         "submodules/solid-site",
-        "submodules/vite-plugin-solid"
+        "submodules/vite-plugin-solid",
+        "submodules/solid-devtools"
     ]
 }
