--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "solid-devtools"]
 	path = submodules/solid-devtools
 	url = git@github.com:fictitious/solid-devtools-proto
+[submodule "solid-tree-view"]
+	path = examples/solid-tree-view
+	url = https://github.com/fictitious/solid-tree-view.git
