--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
     },
     "scripts": {
         "bootstrap": "yarn install --mode=skip-build",
-        "build-babel-plugin-jsx-dom-expressions": "yarn workspace babel-plugin-jsx-dom-expressions run build",
-        "build-lit-dom-expressions": "cd submodules/dom-expressions/packages/lit-dom-expressions && npm run build",
-        "build-hyper-dom-expressions": "cd submodules/dom-expressions/packages/hyper-dom-expressions && npm run build",
+        "build-dom-expressions:babel": "yarn workspace babel-plugin-jsx-dom-expressions run build",
+        "build-dom-expressions:lit": "cd submodules/dom-expressions/packages/lit-dom-expressions && npm run build",
+        "build-dom-expressions:hyper": "cd submodules/dom-expressions/packages/hyper-dom-expressions && npm run build",
         "build-solid-refresh": "yarn workspace solid-refresh run build",
         "build-vite-plugin-solid": "yarn workspace vite-plugin-solid run build",
         "build-solid": "cd submodules/solid/packages/solid && npm run build",
-        "build-solid-devtools": "cd submodules/solid-devtools && yarn run build",
-        "build-dev-dependencies": "npm-run-all -c -p build-babel-plugin-jsx-dom-expressions build-lit-dom-expressions build-hyper-dom-expressions build-solid-refresh build-vite-plugin-solid build-solid",
-        "build": "npm-run-all -s build-dev-dependencies build-solid-devtools"
+        "build-dev-dependencies": "npm-run-all -c -p 'build-dom-expressions:*' build-solid-refresh build-vite-plugin-solid build-solid",
+        "start-example:solid-site": "cd submodules/solid-site && ./node_modules/.bin/vite --open"
     },
     "packageManager": "yarn@3.0.2",
     "workspaces": [
@@ -45,7 +44,6 @@
         "submodules/solid-app-router",
         "submodules/solid-refresh",
         "submodules/solid-site",
-        "submodules/vite-plugin-solid",
-        "submodules/solid-devtools"
+        "submodules/vite-plugin-solid"
     ]
 }
