--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "resolutions": {
         "vite": "2.9.1",
         "esbuild": "0.14.27",
+        "lerna": "4.0.0",
         "dom-expressions": "workspace:*",
         "babel-plugin-jsx-dom-expressions": "workspace:*",
         "lit-dom-expressions": "workspace:*",
